@@ -6,3 +6,9 @@ copyright_year      = 2010
 
 [@Author::DOHERTY]
 no_twitter = 1
+
+[Prereqs]
+Pod::Weaver::Plugin::Encoding           = 0
+Pod::Weaver::Section::Availability      = 1.20
+Pod::Weaver::Section::SourceGitHub      = 0.53
+Pod::Weaver::Section::BugsAndLimitations= 1.20
